--- a/build.config
+++ b/build.config
@@ -1,9 +1,9 @@
 ### Target Vendor/Product (support only Ralink RT3883/MT7620/MT7621/MT7628)
-CONFIG_VENDOR=TPLINK
-CONFIG_PRODUCT=MT7628
+CONFIG_VENDOR=XIAOMI
+CONFIG_PRODUCT=MT7620
 
 ### Target ProductID (board select, max 12 symbols)
-CONFIG_FIRMWARE_PRODUCT_ID="TL_WR842N-V5"
+CONFIG_FIRMWARE_PRODUCT_ID="MI-3"
 
 ############################################################
 ### Linux kernel configuration
@@ -14,23 +14,29 @@ CONFIG_IP_NF_QUEUE=m
 CONFIG_FIRMWARE_INCLUDE_NFQWS=y
 
 ### Force MT7620 CPU clock to 600MHz (override Uboot settings)
-#CONFIG_FIRMWARE_CPU_600MHZ=y
+CONFIG_FIRMWARE_CPU_600MHZ=y
 
 ### Enable MT7620 CPU sleep mode (downclock to 200MHz on idle)
 #CONFIG_FIRMWARE_CPU_SLEEP=y
 
+### Kernel driver select for WiFi AP 5GHz
+### 3.0 = MT7612E v3.0.4.0
+CONFIG_FIRMWARE_WIFI5_DRIVER=3.0
+
 ### Kernel driver select for WiFi AP 2.4GHz
-### 4.0 = MT7628 v4.0.1.3
-CONFIG_FIRMWARE_WIFI2_DRIVER=4.0
+### 2.4 = RT3092 v2.4.0.5
+### 2.5 = RT3092 v2.5.0.11
+### 2.7 = RT3092 v2.7.1.5
+CONFIG_FIRMWARE_WIFI2_DRIVER=2.7
 
 ### Enable IPv6 support
-#CONFIG_FIRMWARE_ENABLE_IPV6=y
+CONFIG_FIRMWARE_ENABLE_IPV6=y
 
 ### Enable USB support
 CONFIG_FIRMWARE_ENABLE_USB=y
 
 ### Enable FAT/FAT32 filesystem support. ~0.1MB
-#CONFIG_FIRMWARE_ENABLE_FAT=y
+CONFIG_FIRMWARE_ENABLE_FAT=y
 
 ### Enable exFAT (FAT/FAT32 too) filesystem support. ~0.12MB
 CONFIG_FIRMWARE_ENABLE_EXFAT=y
@@ -57,13 +63,13 @@ CONFIG_FIRMWARE_ENABLE_FUSE=y
 CONFIG_FIRMWARE_ENABLE_SWAP=y
 
 ### Include UVC camera modules. ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_UVC=y
+CONFIG_FIRMWARE_INCLUDE_UVC=y
 
 ### Include USB-HID modules. ~0.2MB
 #CONFIG_FIRMWARE_INCLUDE_HID=y
 
 ### Include USB-Serial modules (e.g. pl2303). ~0.03MB
-#CONFIG_FIRMWARE_INCLUDE_SERIAL=y
+CONFIG_FIRMWARE_INCLUDE_SERIAL=y
 
 ### Include USB-Audio modules ~0.46MB
 #CONFIG_FIRMWARE_INCLUDE_AUDIO=y
@@ -72,13 +78,13 @@ CONFIG_FIRMWARE_ENABLE_SWAP=y
 CONFIG_FIRMWARE_INCLUDE_XFRM=y
 
 ### Include network QoS scheduling modules. ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_QOS=y
+CONFIG_FIRMWARE_INCLUDE_QOS=y
 
 ### Include IMQ module for shapers (a bit of performance degradation). ~0.02MB
-#CONFIG_FIRMWARE_INCLUDE_IMQ=y
+CONFIG_FIRMWARE_INCLUDE_IMQ=y
 
 ### Include IFB module for shapers. ~0.03MB
-#CONFIG_FIRMWARE_INCLUDE_IFB=y
+CONFIG_FIRMWARE_INCLUDE_IFB=y
 
 ### Include IPSet utility and kernel modules. ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_IPSET=y
@@ -90,7 +96,7 @@ CONFIG_FIRMWARE_INCLUDE_IPSET=y
 #CONFIG_FIRMWARE_INCLUDE_NFSC=y
 
 ### Include CIFS (SMB) client. ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_CIFS=y
+CONFIG_FIRMWARE_INCLUDE_CIFS=y
 
 ### Include Shortcut Forward Engine
 CONFIG_FIRMWARE_INCLUDE_SHORTCUT_FE=y
@@ -124,44 +130,44 @@ CONFIG_FIRMWARE_INCLUDE_LANG_RU=y
 CONFIG_FIRMWARE_INCLUDE_NTFS_3G=y
 
 ### Include LPR printer daemon. ~0.12MB
-#CONFIG_FIRMWARE_INCLUDE_LPRD=y
+CONFIG_FIRMWARE_INCLUDE_LPRD=y
 
 ### Include USB-over-Ethernet printer daemon. ~0.05MB
-#CONFIG_FIRMWARE_INCLUDE_U2EC=y
+CONFIG_FIRMWARE_INCLUDE_U2EC=y
 
 ### Include "tcpdump" utility. ~0.6MB
-#CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
+CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
 
 ### Include "socat" utility ~0.3MB
 #CONFIG_FIRMWARE_INCLUDE_SOCAT=y
 
 ### Include "hdparm" utility (allow set HDD spindown timeout and APM). ~0.1MB
-#CONFIG_FIRMWARE_INCLUDE_HDPARM=y
+CONFIG_FIRMWARE_INCLUDE_HDPARM=y
 
 ### Include "parted" utility (allow make GPT partitions). ~0.3MB
-#CONFIG_FIRMWARE_INCLUDE_PARTED=y
+CONFIG_FIRMWARE_INCLUDE_PARTED=y
 
 ### Include SMB (and WINS) server. ~1.5MB
-#CONFIG_FIRMWARE_INCLUDE_SMBD=y
+CONFIG_FIRMWARE_INCLUDE_SMBD=y
 
 ### Include WINS server only. ~0.4MB
 #CONFIG_FIRMWARE_INCLUDE_WINS=y
 
 ### Include syslog for SMB and WINS server. ~0.3MB
-#CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
+CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
 
 ### Include FTP server. ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_FTPD=y
 CONFIG_FIRMWARE_INCLUDE_FTPD_SSL=y
 
 ### Include alternative L2TP control client RP-L2TP. ~0.1MB
-#CONFIG_FIRMWARE_INCLUDE_RPL2TP=y
+CONFIG_FIRMWARE_INCLUDE_RPL2TP=y
 
 ### Include EAP-TTLS and EAP-PEAP authentication support. openssl ~1.2MB, wpa_supplicant +0.04MB
 CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
 
 ### Include HTTPS support for DDNS client. openssl ~1.2MB
-#CONFIG_FIRMWARE_INCLUDE_DDNS_SSL=y
+CONFIG_FIRMWARE_INCLUDE_DDNS_SSL=y
 
 ### Include HTTPS support. openssl ~1.2MB
 CONFIG_FIRMWARE_INCLUDE_HTTPS=y
@@ -179,10 +185,10 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
 #CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
 
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
-#CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
+CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
 ### Include StrongSwan. XFRM modules ~0.2MB, strongswan ~0.7MB
-#CONFIG_FIRMWARE_INCLUDE_SSWAN=y
+CONFIG_FIRMWARE_INCLUDE_SSWAN=y
 
 ### Include Wireguard VPN module and utilite
 CONFIG_FIRMWARE_INCLUDE_WIREGUARD=y
@@ -191,19 +197,19 @@ CONFIG_FIRMWARE_INCLUDE_WIREGUARD=y
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
 
 ### Include "openssl" executable for generate certificates. ~0.4MB
-#CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
+CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 
 ### Include xUPNPd IPTV mediaserver. ~0.3MB
-#CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
+CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 
 ### Include Minidlna UPnP mediaserver. ~1.6MB
-#CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
+CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
 
 ### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
-#CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
+CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
 
 ### Include Transmission-Web-Control (advanced WebUI). ~0.8MB
-#CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
+CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
 
 ### Include Aria2 download manager. openssl ~1.2MB, aria2 ~3.5MB
 #CONFIG_FIRMWARE_INCLUDE_ARIA=y
@@ -220,43 +226,42 @@ CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
 ### Include IPv6 GeoIP database info for TOR proxy ~0.6MB
 #CONFIG_FIRMWARE_INCLUDE_TOR_GEOIPV6=y
 
+### Include OBFS4 for TOR ~6.1MB
+#CONFIG_FIRMWARE_INCLUDE_OBFS4=y
+
 ### Include Privoxy proxy ~0.3MB
-#CONFIG_FIRMWARE_INCLUDE_PRIVOXY=y
+CONFIG_FIRMWARE_INCLUDE_PRIVOXY=y
 
 ### Include DNSCrypt proxy ~0.5MB
-#CONFIG_FIRMWARE_INCLUDE_DNSCRYPT=y
+CONFIG_FIRMWARE_INCLUDE_DNSCRYPT=y
 
 ### Include Stubby DNS-over-TLS (DoT) ~0.5MB
-#CONFIG_FIRMWARE_INCLUDE_STUBBY=y
+CONFIG_FIRMWARE_INCLUDE_STUBBY=y
 
 ### Include doh_proxy DNS-over-HTTPS (DoH) ~0.4MB
-#CONFIG_FIRMWARE_INCLUDE_DOH=y
+CONFIG_FIRMWARE_INCLUDE_DOH=y
 
 ### Include WPAD support
-#CONFIG_FIRMWARE_INCLUDE_WPAD=y
+CONFIG_FIRMWARE_INCLUDE_WPAD=y
 
 ### Include compressed memory support
-#CONFIG_FIRMWARE_INCLUDE_ZRAM=y
+CONFIG_FIRMWARE_INCLUDE_ZRAM=y
 
 ### Add adb package
 #CONFIG_FIRMWARE_INCLUDE_ADB=y
 
 ### Include LUA support ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_LUA=y
+CONFIG_FIRMWARE_INCLUDE_LUA=y
 
 ### Include EoIP Ethernet Tunnels over IP ~0.01MB
-#CONFIG_FIRMWARE_INCLUDE_EOIP=y
+CONFIG_FIRMWARE_INCLUDE_EOIP=y
 
 ### Include Curl support ~0.15MB
-#CONFIG_FIRMWARE_INCLUDE_CURL=y
+CONFIG_FIRMWARE_INCLUDE_CURL=y
 
 ### Include KMS Activation support ~0.06MB
 CONFIG_FIRMWARE_INCLUDE_VLMCSD=y
 
 ### Include iPerf3 support ~0.13MB
-#CONFIG_FIRMWARE_INCLUDE_IPERF3=y
-
-
-
-### Include iPerf3 support ~0.13MB
 CONFIG_FIRMWARE_INCLUDE_IPERF3=y
+
