--- a/build.config
+++ b/build.config
@@ -8,9 +8,11 @@ CONFIG_FIRMWARE_PRODUCT_ID="MI-3"
 ############################################################
 ### Linux kernel configuration
 ############################################################
-CONFIG_NETFILTER_XT_TARGET_NFQUEUE=m
+CONFIG_NETFILTER_NETLINK=m
 CONFIG_NETFILTER_NETLINK_QUEUE=m
+CONFIG_NETFILTER_XT_TARGET_NFQUEUE=m
 CONFIG_IP_NF_QUEUE=m
+CONFIG_IP6_NF_QUEUE=m
 CONFIG_FIRMWARE_INCLUDE_NFQWS=y
 
 ### Force MT7620 CPU clock to 600MHz (override Uboot settings)
@@ -263,5 +265,6 @@ CONFIG_FIRMWARE_INCLUDE_CURL=y
 CONFIG_FIRMWARE_INCLUDE_VLMCSD=y
 
 ### Include iPerf3 support ~0.13MB
+CONFIG_FIRMWARE_INCLUDE_IPERF3=y
 CONFIG_FIRMWARE_INCLUDE_IPERF3=y
 
