--- a/build.config
+++ b/build.config
@@ -1,46 +1,37 @@
+
 ### Target Vendor/Product (support only Ralink RT3883/MT7620/MT7621/MT7628)
 CONFIG_VENDOR=XIAOMI
-CONFIG_PRODUCT=MT7620
+CONFIG_PRODUCT=MT7621
 
 ### Target ProductID (board select, max 12 symbols)
-CONFIG_FIRMWARE_PRODUCT_ID="MI-3"
+CONFIG_FIRMWARE_PRODUCT_ID="MI-R3G"
 
 ############################################################
 ### Linux kernel configuration
 ############################################################
-### Include nfqws ( https://github.com/bol-van/zapret ) ~0.1MB
-CONFIG_NETFILTER_NETLINK_QUEUE=m
-CONFIG_NETFILTER_XT_TARGET_NFQUEUE=m
-CONFIG_IP_NF_QUEUE=m
-CONFIG_IP6_NF_FILTER=y
-CONFIG_IP6_NF_TARGET_REJECT=y
-CONFIG_IP6_NF_MANGLE=m
-CONFIG_IP6_NF_QUEUE=m
-CONFIG_BRIDGE_NF_EBTABLES=m
-CONFIG_NETFILTER_NETLINK=m
-CONFIG_FIRMWARE_INCLUDE_NFQWS=y
 
-### Force MT7620 CPU clock to 600MHz (override Uboot settings)
-CONFIG_FIRMWARE_CPU_600MHZ=y
+### Force MT7621 CPU clock to 900MHz (override Uboot settings)
+#CONFIG_FIRMWARE_CPU_900MHZ=y
 
-### Enable MT7620 CPU sleep mode (downclock to 200MHz on idle)
+### Enable MT7621 CPU sleep mode (downclock to 220MHz on idle)
 #CONFIG_FIRMWARE_CPU_SLEEP=y
+
+### Kernel driver select for WiFi AP 2.4GHz
+### 4.1 = MT7603E v4.1.0.0
+CONFIG_FIRMWARE_WIFI2_DRIVER=4.1
 
 ### Kernel driver select for WiFi AP 5GHz
 ### 3.0 = MT7612E v3.0.4.0
 CONFIG_FIRMWARE_WIFI5_DRIVER=3.0
-
-### Kernel driver select for WiFi AP 2.4GHz
-### 2.4 = RT3092 v2.4.0.5
-### 2.5 = RT3092 v2.5.0.11
-### 2.7 = RT3092 v2.7.1.5
-CONFIG_FIRMWARE_WIFI2_DRIVER=2.7
 
 ### Enable IPv6 support
 CONFIG_FIRMWARE_ENABLE_IPV6=y
 
 ### Enable USB support
 CONFIG_FIRMWARE_ENABLE_USB=y
+
+### Enable NTFS filesystem support via Paragon "ufsd" driver. ~0.4MB
+CONFIG_FIRMWARE_ENABLE_UFSD=y
 
 ### Enable FAT/FAT32 filesystem support. ~0.1MB
 CONFIG_FIRMWARE_ENABLE_FAT=y
@@ -58,10 +49,10 @@ CONFIG_FIRMWARE_ENABLE_EXFAT=y
 CONFIG_FIRMWARE_ENABLE_EXT4=y
 
 ### Enable XFS filesystem support. ~0.6MB
-#CONFIG_FIRMWARE_ENABLE_XFS=y
+CONFIG_FIRMWARE_ENABLE_XFS=y
 
 ### Enable Apple HFS+ filesystem support. ~0.1MB
-#CONFIG_FIRMWARE_ENABLE_HFS=y
+CONFIG_FIRMWARE_ENABLE_HFS=y
 
 ### Enable FUSE (filesystems in userspace) support. ~0.1MB
 CONFIG_FIRMWARE_ENABLE_FUSE=y
@@ -73,34 +64,34 @@ CONFIG_FIRMWARE_ENABLE_SWAP=y
 CONFIG_FIRMWARE_INCLUDE_UVC=y
 
 ### Include USB-HID modules. ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_HID=y
+CONFIG_FIRMWARE_INCLUDE_HID=y
 
 ### Include USB-Serial modules (e.g. pl2303). ~0.03MB
 CONFIG_FIRMWARE_INCLUDE_SERIAL=y
 
 ### Include USB-Audio modules ~0.46MB
-#CONFIG_FIRMWARE_INCLUDE_AUDIO=y
+CONFIG_FIRMWARE_INCLUDE_AUDIO=y
 
 ### Include XFRM (IPsec) modules & iptables extension ~ 0.2MB
 CONFIG_FIRMWARE_INCLUDE_XFRM=y
 
 ### Include network QoS scheduling modules. ~0.2MB
-CONFIG_FIRMWARE_INCLUDE_QOS=y
+#CONFIG_FIRMWARE_INCLUDE_QOS=y
 
 ### Include IMQ module for shapers (a bit of performance degradation). ~0.02MB
-CONFIG_FIRMWARE_INCLUDE_IMQ=y
+#CONFIG_FIRMWARE_INCLUDE_IMQ=y
 
 ### Include IFB module for shapers. ~0.03MB
-CONFIG_FIRMWARE_INCLUDE_IFB=y
+#CONFIG_FIRMWARE_INCLUDE_IFB=y
 
 ### Include IPSet utility and kernel modules. ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_IPSET=y
 
 ### Include NFSv3 server. ~0.6MB
-#CONFIG_FIRMWARE_INCLUDE_NFSD=y
+CONFIG_FIRMWARE_INCLUDE_NFSD=y
 
 ### Include NFSv3 client. ~0.5MB
-#CONFIG_FIRMWARE_INCLUDE_NFSC=y
+CONFIG_FIRMWARE_INCLUDE_NFSC=y
 
 ### Include CIFS (SMB) client. ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_CIFS=y
@@ -114,13 +105,14 @@ CONFIG_FIRMWARE_INCLUDE_SHORTCUT_FE=y
 ### (в противном случае они будут собраны в отдельный архив для размещения в /opt/lib/)
 #CONFIG_FIRMWARE_INCLUDE_BACKPORTED=y
 
+#CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
+
 ############################################################
 ### Userspace configuration
 ############################################################
 
 ### Include WebUI international resources. Increased firmware size
 #CONFIG_FIRMWARE_INCLUDE_LANG_BR=y
-#CONFIG_FIRMWARE_INCLUDE_LANG_CN=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_CZ=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_DA=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_DE=y
@@ -134,7 +126,7 @@ CONFIG_FIRMWARE_INCLUDE_LANG_RU=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_UK=y
 
 ### Include NTFS-3G FUSE driver (instead of Paragon "ufsd"). ~0.4MB
-CONFIG_FIRMWARE_INCLUDE_NTFS_3G=y
+#CONFIG_FIRMWARE_INCLUDE_NTFS_3G=y
 
 ### Include LPR printer daemon. ~0.12MB
 CONFIG_FIRMWARE_INCLUDE_LPRD=y
@@ -145,9 +137,6 @@ CONFIG_FIRMWARE_INCLUDE_U2EC=y
 ### Include "tcpdump" utility. ~0.6MB
 CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
 
-### Include "socat" utility ~0.3MB
-#CONFIG_FIRMWARE_INCLUDE_SOCAT=y
-
 ### Include "hdparm" utility (allow set HDD spindown timeout and APM). ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_HDPARM=y
 
@@ -156,6 +145,9 @@ CONFIG_FIRMWARE_INCLUDE_PARTED=y
 
 ### Include SMB (and WINS) server. ~1.5MB
 CONFIG_FIRMWARE_INCLUDE_SMBD=y
+
+### Add support SMB2
+CONFIG_FIRMWARE_INCLUDE_SMBD36=y
 
 ### Include WINS server only. ~0.4MB
 #CONFIG_FIRMWARE_INCLUDE_WINS=y
@@ -183,13 +175,13 @@ CONFIG_FIRMWARE_INCLUDE_HTTPS=y
 CONFIG_FIRMWARE_INCLUDE_SFTP=y
 
 ### Include dropbear SSH. ~0.3MB
-CONFIG_FIRMWARE_INCLUDE_DROPBEAR=y
+#CONFIG_FIRMWARE_INCLUDE_DROPBEAR=y
 
 ### Make the dropbear symmetrical ciphers and hashes faster. ~0.06MB
-CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
+#CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
 
 ### Include OpenSSH instead of dropbear. openssl ~1.2MB, openssh ~1.0MB
-#CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
+CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
 
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
@@ -212,6 +204,9 @@ CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 ### Include Minidlna UPnP mediaserver. ~1.6MB
 CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
 
+### Include ffmpeg 0.11.x instead of 0.6.x for Minidlna. ~0.1MB
+CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=y
+
 ### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
 CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
 
@@ -219,22 +214,19 @@ CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
 CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
 
 ### Include Aria2 download manager. openssl ~1.2MB, aria2 ~3.5MB
-#CONFIG_FIRMWARE_INCLUDE_ARIA=y
+CONFIG_FIRMWARE_INCLUDE_ARIA=y
 
 ### Include Aria2 WEB control. ~0.7MB
-#CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
+CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
 
 ### Include TOR proxy ~2.8MB
-#CONFIG_FIRMWARE_INCLUDE_TOR=y
+CONFIG_FIRMWARE_INCLUDE_TOR=y
 
 ### Include GeoIP database info for TOR proxy ~0.7MB
-#CONFIG_FIRMWARE_INCLUDE_TOR_GEOIP=y
+CONFIG_FIRMWARE_INCLUDE_TOR_GEOIP=y
 
 ### Include IPv6 GeoIP database info for TOR proxy ~0.6MB
-#CONFIG_FIRMWARE_INCLUDE_TOR_GEOIPV6=y
-
-### Include OBFS4 for TOR ~6.1MB
-#CONFIG_FIRMWARE_INCLUDE_OBFS4=y
+CONFIG_FIRMWARE_INCLUDE_TOR_GEOIPV6=y
 
 ### Include Privoxy proxy ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_PRIVOXY=y
@@ -255,7 +247,7 @@ CONFIG_FIRMWARE_INCLUDE_WPAD=y
 CONFIG_FIRMWARE_INCLUDE_ZRAM=y
 
 ### Add adb package
-#CONFIG_FIRMWARE_INCLUDE_ADB=y
+CONFIG_FIRMWARE_INCLUDE_ADB=y
 
 ### Include LUA support ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_LUA=y
@@ -272,6 +264,29 @@ CONFIG_FIRMWARE_INCLUDE_VLMCSD=y
 ### Include iPerf3 support ~0.13MB
 CONFIG_FIRMWARE_INCLUDE_IPERF3=y
 
+### Include mt7621_cpufreq support ~0.005MB
+CONFIG_FIRMWARE_INCLUDE_MT7621_CPUFREQ=y
+
+### Include Socat support
+CONFIG_FIRMWARE_INCLUDE_SOCAT=y
+
+### Include OBFS4 for TOR
+CONFIG_FIRMWARE_INCLUDE_OBFS4=y
+
+### Include nfqws ( https://github.com/bol-van/zapret ) ~0.1MB
+CONFIG_FIRMWARE_INCLUDE_NFQWS=y
+# Override kernel config
+CONFIG_NETFILTER_NETLINK_QUEUE=m
+CONFIG_NETFILTER_XT_TARGET_NFQUEUE=m
+CONFIG_IP_NF_QUEUE=m
+CONFIG_IP6_NF_FILTER=y
+CONFIG_IP6_NF_TARGET_REJECT=y
+CONFIG_IP6_NF_MANGLE=m
+CONFIG_IP6_NF_QUEUE=m
+CONFIG_BRIDGE_NF_EBTABLES=m
+CONFIG_NETFILTER_NETLINK=m
+CONFIG_FIRMWARE_INCLUDE_NFQWS=y
+
 ############################################################
 ### Connection settings SSH PROMETHEUS
 ############################################################
@@ -284,4 +299,3 @@ PWDR="admin"
 ### SSH Port
 ssh_port="22"
 ############################################################
-
