--- a/build.config
+++ b/build.config
@@ -220,13 +220,13 @@ CONFIG_FIRMWARE_INCLUDE_ARIA=y
 CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
 
 ### Include TOR proxy ~2.8MB
-CONFIG_FIRMWARE_INCLUDE_TOR=y
+#CONFIG_FIRMWARE_INCLUDE_TOR=y
 
 ### Include GeoIP database info for TOR proxy ~0.7MB
-CONFIG_FIRMWARE_INCLUDE_TOR_GEOIP=y
+#CONFIG_FIRMWARE_INCLUDE_TOR_GEOIP=y
 
 ### Include IPv6 GeoIP database info for TOR proxy ~0.6MB
-CONFIG_FIRMWARE_INCLUDE_TOR_GEOIPV6=y
+#CONFIG_FIRMWARE_INCLUDE_TOR_GEOIPV6=y
 
 ### Include Privoxy proxy ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_PRIVOXY=y
@@ -271,7 +271,7 @@ CONFIG_FIRMWARE_INCLUDE_MT7621_CPUFREQ=y
 CONFIG_FIRMWARE_INCLUDE_SOCAT=y
 
 ### Include OBFS4 for TOR
-CONFIG_FIRMWARE_INCLUDE_OBFS4=y
+#CONFIG_FIRMWARE_INCLUDE_OBFS4=y
 
 ### Include nfqws ( https://github.com/bol-van/zapret ) ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_NFQWS=y
