--- a/build.config
+++ b/build.config
@@ -284,8 +284,9 @@ CONFIG_IP6_NF_TARGET_REJECT=y
 CONFIG_IP6_NF_MANGLE=m
 CONFIG_IP6_NF_QUEUE=m
 CONFIG_BRIDGE_NF_EBTABLES=m
-CONFIG_NETFILTER_NETLINK=m
-CONFIG_FIRMWARE_INCLUDE_NFQWS=y
+
+###Added AmneziaWG kernel module 
+CONFIG_FIRMWARE_INCLUDE_AMNEZIAWG=y 
 
 ############################################################
 ### Connection settings SSH PROMETHEUS
