--- a/build.config
+++ b/build.config
@@ -1,4 +1,3 @@
-
 ### Target Vendor/Product (support only Ralink RT3883/MT7620/MT7621/MT7628)
 CONFIG_VENDOR=XIAOMI
 CONFIG_PRODUCT=MT7621
@@ -11,7 +10,7 @@ CONFIG_FIRMWARE_PRODUCT_ID="MI-R3G"
 ############################################################
 
 ### Force MT7621 CPU clock to 900MHz (override Uboot settings)
-CONFIG_FIRMWARE_CPU_960MHZ=y
+#CONFIG_FIRMWARE_CPU_900MHZ=y
 
 ### Enable MT7621 CPU sleep mode (downclock to 220MHz on idle)
 #CONFIG_FIRMWARE_CPU_SLEEP=y
@@ -30,9 +29,6 @@ CONFIG_FIRMWARE_ENABLE_IPV6=y
 ### Enable USB support
 CONFIG_FIRMWARE_ENABLE_USB=y
 
-### Enable NTFS filesystem support via Paragon "ufsd" driver. ~0.4MB
-CONFIG_FIRMWARE_ENABLE_UFSD=y
-
 ### Enable FAT/FAT32 filesystem support. ~0.1MB
 CONFIG_FIRMWARE_ENABLE_FAT=y
 
@@ -49,10 +45,10 @@ CONFIG_FIRMWARE_ENABLE_EXFAT=y
 CONFIG_FIRMWARE_ENABLE_EXT4=y
 
 ### Enable XFS filesystem support. ~0.6MB
-CONFIG_FIRMWARE_ENABLE_XFS=y
+#CONFIG_FIRMWARE_ENABLE_XFS=y
 
 ### Enable Apple HFS+ filesystem support. ~0.1MB
-CONFIG_FIRMWARE_ENABLE_HFS=y
+#CONFIG_FIRMWARE_ENABLE_HFS=y
 
 ### Enable FUSE (filesystems in userspace) support. ~0.1MB
 CONFIG_FIRMWARE_ENABLE_FUSE=y
@@ -70,7 +66,7 @@ CONFIG_FIRMWARE_INCLUDE_HID=y
 CONFIG_FIRMWARE_INCLUDE_SERIAL=y
 
 ### Include USB-Audio modules ~0.46MB
-CONFIG_FIRMWARE_INCLUDE_AUDIO=y
+#CONFIG_FIRMWARE_INCLUDE_AUDIO=y
 
 ### Include XFRM (IPsec) modules & iptables extension ~ 0.2MB
 CONFIG_FIRMWARE_INCLUDE_XFRM=y
@@ -105,14 +101,13 @@ CONFIG_FIRMWARE_INCLUDE_SHORTCUT_FE=y
 ### (в противном случае они будут собраны в отдельный архив для размещения в /opt/lib/)
 #CONFIG_FIRMWARE_INCLUDE_BACKPORTED=y
 
-#CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
-
 ############################################################
 ### Userspace configuration
 ############################################################
 
 ### Include WebUI international resources. Increased firmware size
 #CONFIG_FIRMWARE_INCLUDE_LANG_BR=y
+#CONFIG_FIRMWARE_INCLUDE_LANG_CN=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_CZ=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_DA=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_DE=y
@@ -126,7 +121,7 @@ CONFIG_FIRMWARE_INCLUDE_LANG_RU=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_UK=y
 
 ### Include NTFS-3G FUSE driver (instead of Paragon "ufsd"). ~0.4MB
-#CONFIG_FIRMWARE_INCLUDE_NTFS_3G=y
+CONFIG_FIRMWARE_INCLUDE_NTFS_3G=y
 
 ### Include LPR printer daemon. ~0.12MB
 CONFIG_FIRMWARE_INCLUDE_LPRD=y
@@ -137,6 +132,12 @@ CONFIG_FIRMWARE_INCLUDE_U2EC=y
 ### Include "tcpdump" utility. ~0.6MB
 CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
 
+### Include "socat" utility ~0.3MB
+#CONFIG_FIRMWARE_INCLUDE_SOCAT=y
+
+### Include "ndisc6" and "rdisc6" utilities ~0.27MB
+#CONFIG_FIRMWARE_INCLUDE_NDISC6_RDISC6=y
+
 ### Include "hdparm" utility (allow set HDD spindown timeout and APM). ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_HDPARM=y
 
@@ -145,9 +146,6 @@ CONFIG_FIRMWARE_INCLUDE_PARTED=y
 
 ### Include SMB (and WINS) server. ~1.5MB
 CONFIG_FIRMWARE_INCLUDE_SMBD=y
-
-### Add support SMB2
-CONFIG_FIRMWARE_INCLUDE_SMBD36=y
 
 ### Include WINS server only. ~0.4MB
 #CONFIG_FIRMWARE_INCLUDE_WINS=y
@@ -192,6 +190,9 @@ CONFIG_FIRMWARE_INCLUDE_SSWAN=y
 ### Include Wireguard VPN module and utilite
 CONFIG_FIRMWARE_INCLUDE_WIREGUARD=y
 
+### Include AmneziaWG kernel module
+CONFIG_FIRMWARE_INCLUDE_AMNEZIAWG=y
+
 ### Include Elliptic Curves (EC) to openssl library. ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
 
@@ -203,9 +204,6 @@ CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 
 ### Include Minidlna UPnP mediaserver. ~1.6MB
 CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
-
-### Include ffmpeg 0.11.x instead of 0.6.x for Minidlna. ~0.1MB
-CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=y
 
 ### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
 CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
@@ -228,6 +226,9 @@ CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
 ### Include IPv6 GeoIP database info for TOR proxy ~0.6MB
 #CONFIG_FIRMWARE_INCLUDE_TOR_GEOIPV6=y
 
+### Include OBFS4 for TOR ~6.1MB
+#CONFIG_FIRMWARE_INCLUDE_OBFS4=y
+
 ### Include Privoxy proxy ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_PRIVOXY=y
 
@@ -247,7 +248,7 @@ CONFIG_FIRMWARE_INCLUDE_WPAD=y
 CONFIG_FIRMWARE_INCLUDE_ZRAM=y
 
 ### Add adb package
-CONFIG_FIRMWARE_INCLUDE_ADB=y
+#CONFIG_FIRMWARE_INCLUDE_ADB=y
 
 ### Include LUA support ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_LUA=y
@@ -265,13 +266,10 @@ CONFIG_FIRMWARE_INCLUDE_VLMCSD=y
 CONFIG_FIRMWARE_INCLUDE_IPERF3=y
 
 ### Include mt7621_cpufreq support ~0.005MB
-CONFIG_FIRMWARE_INCLUDE_MT7621_CPUFREQ=y
+#CONFIG_FIRMWARE_INCLUDE_MT7621_CPUFREQ=y
 
-### Include Socat support
-CONFIG_FIRMWARE_INCLUDE_SOCAT=y
-
-### Include OBFS4 for TOR
-#CONFIG_FIRMWARE_INCLUDE_OBFS4=y
+### Reduce trx image size
+#CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 
 ### Include nfqws ( https://github.com/bol-van/zapret ) ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_NFQWS=y
@@ -284,9 +282,7 @@ CONFIG_IP6_NF_TARGET_REJECT=y
 CONFIG_IP6_NF_MANGLE=m
 CONFIG_IP6_NF_QUEUE=m
 CONFIG_BRIDGE_NF_EBTABLES=m
-
-###Added AmneziaWG kernel module 
-CONFIG_FIRMWARE_INCLUDE_AMNEZIAWG=y 
+CONFIG_NETFILTER_NETLINK=m
 
 ############################################################
 ### Connection settings SSH PROMETHEUS
