--- a/build.config
+++ b/build.config
@@ -99,7 +99,7 @@ CONFIG_FIRMWARE_INCLUDE_CIFS=y
 CONFIG_FIRMWARE_INCLUDE_SHORTCUT_FE=y
 
 ### Включить сборку бэкпортированных драйверов для медиа устройств
-#CONFIG_FIRMWARE_ENABLE_BACKPORTED=y
+CONFIG_FIRMWARE_ENABLE_BACKPORTED=y
 ### Поместить бэкпортированный драйвера в образ прошивки
 ### (в противном случае они будут собраны в отдельный архив для размещения в /opt/lib/)
 CONFIG_FIRMWARE_INCLUDE_BACKPORTED=y
